stylesheet.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f5f5f5;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

html {
    overflow-y: scroll;
}

h1 {
    text-align: center;
    margin-bottom: 20px;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.year {
    cursor: pointer;
    font-weight: bold;
    font-size: large;
    margin-bottom: 10px;
    padding: 5px;
    align-content: center;
    text-align: center;
    width: 230px;
    height: 30px;
    background-color: #e8e8e8;
    border-radius: 10px;
    margin-left: auto;
    margin-right: auto;
    transition: background-color 0.3s;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.year:hover {
    background-color: #d3d3d3;
}

.year:active {
    background-color: #b0b0b0;
}


.interns {
    display: none;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
    max-width: 300px;
    min-width: 265px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 10px;
    padding-top: 5px;
    background-color: #ffffff;
    border-radius: 30px;
}

.interns p {
    margin: 4px;
}

.interns div > li {
    margin-top: 10px;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

ul {
    list-style: none;
    padding: 0;
}

.interns li {
    cursor: pointer;
    padding-bottom: 10px;
    padding-top: 10px;
    display: flex;
    align-items: center;
    justify-content: left;
    border-bottom: 2px solid #ddd;
    border-radius: 50px;
    transition: background-color 0.3s;
    background-color: #f6f6f6;
    width: 300px;
}

#fullLink {
    justify-content:center;
    width: fit-content;
    margin: auto;
    padding-left: 20px;
    padding-right: 20px;

}

#fullLink p {
    font-weight: bold;
    margin: auto;
    display: flex;
    font-size: medium;
    
    /* padding-left: 20px;
    padding-right: 20px; */
    color: rgb(138, 138, 138);
}

.interns .groupIMG img {
    max-width: 100%;
    margin-left: 0px;
    border-radius: 20px;
    padding-bottom: 10px;
    
}

.interns li:hover {
    background-color: #d3d3d3;
}

.interns li:active {
    background-color: #b0b0b0;
}

.interns img {
    max-width: 65px;
    margin-right: 10px;
    margin-left: 40px;
    border-radius: 10px;
}

#internName {
    font-weight: bold;
    font-size: 1em;
    opacity: 0.9
}

#internTitle {
    font-size: 0.9em;
    opacity: 0.7;
}

#persType {
    font-size: 0.8em;
    opacity: 0.5;
}

.footer {
    margin-top: auto;
    background-color: #e3e3e3;
    color: #7f7f7f;
    text-align: center;
    padding: 1rem;
}

.footer a {
    text-decoration: none;
    color: #7f7f7f;
}

.footer a:hover {
    text-decoration: underline;
    color: #3b3b3b;
}

#topTitle {
    display: flex;
    justify-content: center;
    margin-left: -50px;
    background-color: #e3e3e3;
    margin-bottom: 20px;
}

#topTitle img {
    height: 90px;
}

#topTitle h1 {
    margin-top: 30px;
}

/* #8cc84b
#ffffff */
  

